Fix page vertical overflow.

--- a/src/App.scss
+++ b/src/App.scss
@@ -113,7 +113,7 @@ a {
 
 .page {
   height: 100vh;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   position: fixed;
   width: 100vw;
